Added Image Streaming

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,11 @@ cassandra {
   keyspace = "hashads"
 }
 
+mongodb {
+  host ="mongodb://localhost:27017/"
+  database="hashadsfiles"
+}
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
